<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@color/textColor">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:padding="30dp"
        android:textSize="40sp"
        android:textColor="@color/colorAccent"/>

    <EditText
        android:id="@+id/input_email"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColor="@color/colorAccent"
        android:textSize="28sp"/>


    <EditText
        android:id="@+id/input_password"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textSize="28sp"
        android:hint="@string/password"
        android:textColor="@color/colorAccent"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:text="@string/login"
        android:textSize="20sp"
        android:shadowColor="@color/colorPrimaryDark"
        android:backgroundTint="@color/buttonColor"
        android:textColor="@color/colorAccent"/>

    <TextView android:id="@+id/link_createAccount"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="24dp"
              android:text="@string/createAccount"
              android:textColor="@color/colorAccent"
              android:gravity="center"
              android:textSize="20sp"/>



</LinearLayout>
