<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    tools:context="com.example.katie.mylang.AddDictionaryActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <TextView
        android:id="@+id/createDictionaryTextView"
        android:background="@color/textColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/createNewDicitonary"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/dictionaryName"
        android:hint="@string/dictionaryName"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_marginStart="10dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginEnd="10dp"
        />

    <EditText
        android:id="@+id/dictionaryDescription"
        android:hint="@string/dictionary_descriptions"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:textColor="@color/colorPrimaryDark"
        />

    <TextView
        android:id="@+id/colorDescription"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/color_option"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:gravity="center"/>

    <RadioGroup
        android:id="@+id/radioColors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

            <RadioButton
                android:layout_marginStart="130dp"
                android:id="@+id/radioRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/textColor" />

            <RadioButton
                android:id="@+id/radioGreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/green"/>

            <RadioButton
                android:id="@+id/radioOrange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/orange"/>

            <RadioButton
                android:id="@+id/radioBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/blue"
                android:layout_marginEnd="30dp"/>

    </RadioGroup>

    <Button
        android:id="@+id/btn_createDictionary"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/create"/>

</LinearLayout>
